[metadata]
name = dusqlite
description = SQL Based Disk Usage Analyser
long_description = file: README.rst
url = https://github.com/coecms/dusqlite
license = Apache v2.0
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dusqlite = dusqlite.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/dusqlite/_version.py
versionfile_build = dusqlite/_version.py
tag_prefix =
parentdir_prefix = dusqlite-

[coverage:run]
source=dusqlite
omit=
    src/dusqlite/_version.py

[coverage:paths]
source=
	src/dusqlite
	$CONDA_PREFIX/lib/python*/site-packages/dusqlite
